Fixing spacing, issues with education section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ h1.header {
 	font-size: 56px;
 	line-height: 56px;
 	padding-bottom: 4px;
-	margin-bottom: 4px;
+	margin-bottom: 40px;
 	margin-top: 0;
 	font-weight:300;
 	letter-spacing:-1px;
